Update template and add proposal skeleton

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -123,9 +123,9 @@ int main(int argc, char *argv[])
 
 Now we're going to cite somebody. Watch for the cite tag. Here it
 comes. Arpachi-Dusseau and Arpachi-Dusseau co-authored an excellent OS
-book, which is also really funny~\cite{arpachiDusseau18:osbook}, and
+book, which is also really funny~, and
 Waldspurger got into the SIGOPS hall-of-fame due to his seminal paper
-about resource management in the ESX hypervisor~\cite{waldspurger02}.
+about resource management in the ESX hypervisor~.
 
 The tilde character (\~{}) in the tex source means a non-breaking
 space. This way, your reference will always be attached to the word
@@ -135,7 +135,7 @@ And the 'cite' package sorts your citations by their numerical order
 of the corresponding references at the end of the paper, ridding you
 from the need to notice that, e.g, ``Waldspurger'' appears after
 ``Arpachi-Dusseau'' when sorting references
-alphabetically~\cite{waldspurger02,arpachiDusseau18:osbook}.
+alphabetically~.
 
 It'd be nice and thoughtful of you to include a suitable link in each
 and every bibtex entry that you use in your submission, to allow
@@ -145,6 +145,7 @@ done in all entries found in the References section of this document.
 Now we're going take a look at Section~\ref{sec:figs}, but not before
 observing that refs to sections and citations and such are colored and
 clickable in the PDF because of the packages we've included.
+\cite{1994-ClarkeEtAl}
 
 %-------------------------------------------------------------------------------
 \section{Floating Figures and Lists}
