Update tex style

--- a/proposal/usenix2019_v3.sty
+++ b/proposal/usenix2019_v3.sty
@@ -28,7 +28,7 @@
 
 % appearance
 \usepackage[kerning,spacing]{microtype} % more compact and arguably nicer
-\usepackage{flushend} % make cols in last page equal in size
+\usepackage[keeplastbox]{flushend} % make cols in last page equal in size
 
 % refs and bib
 \usepackage{cite}               % order multiple entries in \cite{...}
@@ -64,7 +64,7 @@
 % Usenix wants no page numbers for camera-ready papers, so that they can
 % number them themselves.  But submitted papers should have page numbers
 % for the reviewers' convenience.
-% 
+%
 %
 % \pagestyle{empty}
 
