--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -67,16 +67,15 @@
 \date{}
 
 % make title bold and 14 pt font (Latex default is non-bold, 16 pt)
-\title{\Large \bf Formatting Submissions for a USENIX Conference:\\
-  An (Incomplete) Example}
+\title{\Large \bf CS 523 Project Proposal:\\
+Middlebox Analysis for Network Verification}
 
 %for single author (just remove % characters)
 \author{
-{\rm Your N.\ Here}\\
-Your Institution
-\and
-{\rm Second Name}\\
-Second Institution
+{\rm Kuan-Yen Chou}
+\qquad
+{\rm Bin-Chou Kao}\\
+University of Illinois at Urbana-Champaign
 % copy the following lines to add more authors
 % \and
 % {\rm Name}\\
@@ -86,150 +85,121 @@ Second Institution
 \maketitle
 
 %-------------------------------------------------------------------------------
-\begin{abstract}
+%\begin{abstract}
 %-------------------------------------------------------------------------------
-Your abstract text goes here. Just a few facts. Whet our appetites.
-Not more than 200 words, if possible, and preferably closer to 150.
-\end{abstract}
+%Your abstract text goes here. Just a few facts. Whet our appetites.
+%Not more than 200 words, if possible, and preferably closer to 150.
+%\end{abstract}
 
-
-%-------------------------------------------------------------------------------
-\section{Introduction}
-%-------------------------------------------------------------------------------
-
-A paragraph of text goes here. Lots of text. Plenty of interesting
-text. Text text text text text text text text text text text text text
-text text text text text text text text text text text text text text
-text text text text text text text text text text text text text text
-text text text text text text text.
-More fascinating text. Features galore, plethora of promises.
 
 %-------------------------------------------------------------------------------
-\section{Footnotes, Verbatim, and Citations}
+\section{Introduction and Background}
 %-------------------------------------------------------------------------------
 
-Footnotes should be places after punctuation characters, without any
-spaces between said characters and footnotes, like so.%
-\footnote{Remember that USENIX format stopped using endnotes and is
-  now using regular footnotes.} And some embedded literal code may
-look as follows.
+Networks play an essential role in modern computing systems, many of which are
+interconnected and administered by various organizations and institutions. With
+the core architecture and protocols being devised in the 1990s and early 2000s,
+it has been a challenging yet important task to efficiently and effectively
+manage the legacy/traditional networks without causing any serious outages
+\footnote{In this paper, we use the terms "legacy networks" and "traditional
+networks" interchangeably, in contrast to the newer implementations of
+software-defined networks (SDN). Nonetheless, the middlebox analysis techniques
+should not be limited to any certain kinds of networks.},
+since a minor configuration error by a human operator can potentially affect the
+behavior of multiple networks globally, which could cause serious financial
+losses. As a result, it would be extremely beneficial if we are able to either
+formally verify or test the correctness of a given network to some satisfactory
+extent.
 
-\begin{verbatim}
-int main(int argc, char *argv[])
-{
-    return 0;
-}
-\end{verbatim}
+In order to verify or test a given network, one of the biggest obstacles is the
+existence of middleboxes. Middleboxes are special devices that are deployed
+somewhere in a network for some complicated network functions, such as packet
+processing, packet filtering, traffic engineering, or packet inspection. They
+can be real appliances one bought from a device vendor, or distributed as
+software running on other machines. Some common middleboxes are firewalls (FWs),
+network address translators (NATs), load balancers (LBs), caching proxies, and
+intrusion detection/prevention systems (IDS/IPS).
 
-Now we're going to cite somebody. Watch for the cite tag. Here it
-comes. Arpachi-Dusseau and Arpachi-Dusseau co-authored an excellent OS
-book, which is also really funny~, and
-Waldspurger got into the SIGOPS hall-of-fame due to his seminal paper
-about resource management in the ESX hypervisor~.
+For verifying networks with middleboxes, it is very hard to automatically or
+efficiently create accurate models for all kinds of middleboxes. Plankton-neo
+\cite{2018-PrabhuEtAl} tried to solve the problem by combining model-checking
+verification with emulation. However, in Plankton-neo, for each execution path
+of a network system, the corresponding representative packet of a packet
+equivalence class (PEC) is injected only once, which does not provide sufficient
+coverage if a middlebox behaves non-deterministically (i.e. for the same input
+packet, it has more than one different possible actions, without internal state
+changes). Some examples are load balancers and dynamic NATs. In addition, the
+PECs are computed from the configurations of the middleboxes and other nodes,
+which is not ideal in practice for two reasons. One is that it is very likely
+that we don't have a formal specification of how a middlebox works in detail.
+The other reason is that even if we have a detailed, formal specification of a
+middlebox, it is highly probable that there are implementation bugs in the
+software.
 
-The tilde character (\~{}) in the tex source means a non-breaking
-space. This way, your reference will always be attached to the word
-that preceded it, instead of going to the next line.
+%which does not account for run-time state changes (caused by packet traversal),
+%so that people had to apply domain knowledge to design sensible policies
+%according to the middlebox, and use it to compute new PEC(s) at run time. For
+%example, for common stateful firewalls, we know that the affected new PEC of a
+%request packet (consider a L7 http packet for instance) or a request connection
+%is the reply packets. For reverse cache servers, we know that the affected new
+%PEC is the same as the PEC that caused previous cache miss. It is very likely
+%that the middleboxes are implemented differently from what we thought, and may
+%even have bugs. That's why we want to derive the sequences of related PECs from
+%the actual middleboxes rather than our assumptions.
 
-And the 'cite' package sorts your citations by their numerical order
-of the corresponding references at the end of the paper, ridding you
-from the need to notice that, e.g, ``Waldspurger'' appears after
-``Arpachi-Dusseau'' when sorting references
-alphabetically~.
-
-It'd be nice and thoughtful of you to include a suitable link in each
-and every bibtex entry that you use in your submission, to allow
-reviewers (and other readers) to easily get to the cited work, as is
-done in all entries found in the References section of this document.
-
-Now we're going take a look at Section~\ref{sec:figs}, but not before
-observing that refs to sections and citations and such are colored and
-clickable in the PDF because of the packages we've included.
-\cite{1994-ClarkeEtAl}
 
 %-------------------------------------------------------------------------------
-\section{Floating Figures and Lists}
-\label{sec:figs}
+\section{Problems and Methods}
 %-------------------------------------------------------------------------------
 
+To summarize, the problems and the proposed plans are
+\footnote{In this project, we assume that we are already in possession of the
+binary executables and the configuration files needed to instantiate the
+middleboxes in the network.}:
 
-%---------------------------
-\begin{figure}
-\begin{center}
-\begin{tikzpicture}
-  \draw[thin,gray!40] (-2,-2) grid (2,2);
-  \draw[<->] (-2,0)--(2,0) node[right]{$x$};
-  \draw[<->] (0,-2)--(0,2) node[above]{$y$};
-  \draw[line width=2pt,blue,-stealth](0,0)--(1,1)
-        node[anchor=south west]{$\boldsymbol{u}$};
-  \draw[line width=2pt,red,-stealth](0,0)--(-1,-1)
-        node[anchor=north east]{$\boldsymbol{-u}$};
-\end{tikzpicture}
-\end{center}
-\caption{\label{fig:vectors} Text size inside figure should be as big as
-  caption's text. Text size inside figure should be as big as
-  caption's text. Text size inside figure should be as big as
-  caption's text. Text size inside figure should be as big as
-  caption's text. Text size inside figure should be as big as
-  caption's text. }
-\end{figure}
-%% %---------------------------
-
-
-Here's a typical reference to a floating figure:
-Figure~\ref{fig:vectors}. Floats should usually be placed where latex
-wants then. Figure\ref{fig:vectors} is centered, and has a caption
-that instructs you to make sure that the size of the text within the
-figures that you use is as big as (or bigger than) the size of the
-text in the caption of the figures. Please do. Really.
-
-In our case, we've explicitly drawn the figure inlined in latex, to
-allow this tex file to cleanly compile. But usually, your figures will
-reside in some file.pdf, and you'd include them in your document
-with, say, \textbackslash{}includegraphics.
-
-Lists are sometimes quite handy. If you want to itemize things, feel
-free:
-
-\begin{description}
-
-\item[fread] a function that reads from a \texttt{stream} into the
-  array \texttt{ptr} at most \texttt{nobj} objects of size
-  \texttt{size}, returning returns the number of objects read.
-
-\item[Fred] a person's name, e.g., there once was a dude named Fred
-  who separated usenix.sty from this file to allow for easy
-  inclusion.
-\end{description}
-
-\noindent
-The noindent at the start of this paragraph in its tex version makes
-it clear that it's a continuation of the preceding paragraph, as
-opposed to a new paragraph in its own right.
+\begin{enumerate}
+\item \textit{\textbf{How do we explore all the non-deterministic actions of a
+    middlebox with a given input (a PEC)?}}\\
+        Given the binary and configuration files of a middlebox, We plan to
+        first utilize some existing binary analysis and symbolic execution tools
+        (including but not limited to KLEE, angr, and BAP), explore their
+        abilities and limitations, and then find a way to integrate with or
+        modify for our middlebox analysis system. The expected result is a set
+        of possible actions taken by the middlebox with the input.
+\item \textit{\textbf{Which PECs, or sequences of PECs, will make the middlebox
+    behave differently?}} \cite{2017-PandaEtAl}\\
+        This problem is expected to be much harder, because, in order to get the
+        answer, theoretically we would need to know, or test, every combination
+        of all the different PECs, which in turn need the results from the first
+        problem. Similarly, we plan to utilize the existing symbolic execution
+        techniques, inject the representative packets of corresponding PECs, and
+        then observe the set of result actions.
+        \footnote{In this course, we will mostly focus on the first problem,
+        design some concrete scenarios, solve the problem for those common
+        middleboxes first, and then generalize and automate the analysis
+        process.}
+\end{enumerate}
 
 
-\subsection{LaTeX-ing Your TeX File}
+%-------------------------------------------------------------------------------
+%\section{Methods}
+%-------------------------------------------------------------------------------
+
+%\subsection{}
 %-----------------------------------
 
-People often use \texttt{pdflatex} these days for creating pdf-s from
-tex files via the shell. And \texttt{bibtex}, of course. Works for us.
-
 %-------------------------------------------------------------------------------
-\section*{Acknowledgments}
+%\section*{Acknowledgments}
 %-------------------------------------------------------------------------------
 
-The USENIX latex style is old and very tired, which is why
-there's no \textbackslash{}acks command for you to use when
-acknowledging. Sorry.
-
 %-------------------------------------------------------------------------------
-\section*{Availability}
+%\section*{Availability}
 %-------------------------------------------------------------------------------
 
-USENIX program committees give extra points to submissions that are
-backed by artifacts that are publicly available. If you made your code
-or data available, it's worth mentioning this fact in a dedicated
-section.
+%USENIX program committees give extra points to submissions that are
+%backed by artifacts that are publicly available. If you made your code
+%or data available, it's worth mentioning this fact in a dedicated
+%section.
 
 %-------------------------------------------------------------------------------
 \bibliographystyle{plain}
