--- a/paper/final/report.tex
+++ b/paper/final/report.tex
@@ -94,12 +94,12 @@ project about middlebox analysis, current design of analysis procedure,
 experiment, and the challenges we have encountered.
 \end{abstract}
 
-\input{Section/intro.tex}
-\input{Section/background.tex}
-\input{Section/design.tex}
-\input{Section/eval.tex}
-\input{Section/related_work.tex}
-\input{Section/conclusion.tex}
+\input{section/intro.tex}
+\input{section/background.tex}
+\input{section/design.tex}
+\input{section/eval.tex}
+\input{section/related_work.tex}
+\input{section/conclusion.tex}
 
 %-------------------------------------------------------------------------------
 %\section*{Acknowledgments}
