Finish evaluation 5.1 source-based hashing load balancing

--- a/paper/final/report.tex
+++ b/paper/final/report.tex
@@ -60,6 +60,28 @@
 \usepackage{filecontents}
 
 %-------------------------------------------------------------------------------
+%   CODE INCLUSION CONFIGURATION
+%-------------------------------------------------------------------------------
+
+\usepackage{listings}
+
+\lstset{language=C,
+        frame=L,
+        belowcaptionskip=1\baselineskip,
+        breaklines=true,
+        xleftmargin=\parindent,
+        showstringspaces=false,
+        basicstyle=\small\ttfamily,
+        keywordstyle=\bfseries\color{green!60!black},
+        commentstyle=\color{gray},
+        identifierstyle=\color{black},
+        stringstyle=\color{orange!70!black},
+        %numbers=left, % Line numbers on left
+        %firstnumber=1, % Line numbers start with line 1
+        %numberstyle=\scriptsize\ttfamily\color{Brown},
+}
+
+%-------------------------------------------------------------------------------
 \begin{document}
 %-------------------------------------------------------------------------------
 
