--- a/paper/final/section/Notuse.tex
+++ b/paper/final/section/Notuse.tex
@@ -13,3 +13,4 @@ statically. Though it may be possible to inject concrete values to some
 variables to the program through angr and to get the concrete values of those
 function pointers, it would definitely increase the complexity of the analysis.
 
+% vim: set ft=tex :
