--- a/paper/final/section/background.tex
+++ b/paper/final/section/background.tex
@@ -73,3 +73,5 @@ the language, it is impossible to understand their documentations or APIs. As a
 result, we will only focus on angr, which is written in Python, for the course
 project, although BAP seems to have better performance. We may explore more
 about BAP and learn OCaml properly after this course.
+
+% vim: set ft=tex :
