--- a/paper/final/section/intro.tex
+++ b/paper/final/section/intro.tex
@@ -45,7 +45,9 @@ The other reason is that even if we have a detailed, formal specification of a
 middlebox, it is highly probable that there are implementation bugs in the
 software.
 % goal
-Thus, in this project, we plan to analyze some given middleboxes so as to make 
-it easier to verify such networks. The goal is to explore all the non-deterministic 
+Thus, in this project, we plan to analyze some given middleboxes so as to make
+it easier to verify such networks. The goal is to explore all the non-deterministic
 actions given a middlebox and an input.
 
+
+% vim: set ft=tex :
