--- a/paper/final/section/conclusion.tex
+++ b/paper/final/section/conclusion.tex
@@ -1,1 +1,12 @@
-\section{Conclusion}
+%-------------------------------------------------------------------------------
+\section{Conclusion and Future Work}
+%-------------------------------------------------------------------------------
+
+% summary of the work
+
+% future directions
+
+
+
+%-------------------------------------------------------------------------------
+% vim: set ft=tex :
